SLING-4068 : Drop support PROPERTY_NOTIFICATION_JOB event property SLING-4065 : Add notification when a job is added SLING-4063 : Fix job queue statistics
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1632253 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/pom.xml
+++ b/bundles/extensions/event/pom.xml
@@ -116,7 +116,7 @@
                         -Xmx2048m -XX:MaxPermSize=512m
                     </argLine>
                     <includes>
-                        <include>**/it/OrderedQueueTest*</include>
+                        <include>**/it/Ordered*</include>
                     </includes>
                 </configuration>
             </plugin>
