SLING-4001 - avoid snapshot
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1632549 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/explorers/resourceeditor/pom.xml
+++ b/contrib/explorers/resourceeditor/pom.xml
@@ -51,7 +51,7 @@
 			<plugin>
 				<groupId>org.lesscss</groupId>
 				<artifactId>lesscss-maven-plugin</artifactId>
-				<version>1.7.0.1.1-SNAPSHOT</version>
+				<version>1.7.0.1.1</version>
 				<configuration>
 					<outputDirectory>${project.basedir}/src/main/resources/SLING-INF/libs/reseditor/content/css</outputDirectory>
 					<includes>
