--- a/contrib/explorers/resourceeditor/pom.xml
+++ b/contrib/explorers/resourceeditor/pom.xml
@@ -12,6 +12,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+        <parent>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>sling</artifactId>
+            <version>22</version>
+            <relativePath>../../../parent/pom.xml</relativePath>
+        </parent>
+
 	<groupId>org.apache.sling</groupId>
 	<artifactId>resource-editor</artifactId>
 	<packaging>bundle</packaging>
@@ -69,7 +77,6 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-scr-plugin</artifactId>
-				<version>1.7.2</version>
 				<executions>
 					<execution>
 						<id>generate-scr-descriptor</id>
@@ -82,7 +89,6 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
@@ -101,41 +107,6 @@
 					<remoteOBR>www.jcrbrowser.org</remoteOBR>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.sling</groupId>
-				<artifactId>maven-sling-plugin</artifactId>
-				<version>2.1.0</version>
-				<executions>
-					<execution>
-						<id>install-bundle</id>
-						<goals>
-							<goal>validate</goal>
-							<goal>install</goal>
-						</goals>
-						<configuration>
-							<mountByFS>true</mountByFS>
-							<slingUrl>http://localhost:8080/system/console</slingUrl>
-							<user>admin</user>
-							<password>admin</password>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.2.2</version>
-			</plugin>
-
 		</plugins>
 		<extensions>
 			<extension>
@@ -185,7 +156,6 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.scr.annotations</artifactId>
-			<version>1.6.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
