SLING-4048 : Avoid keeping jobs in memory. Remove obsolete and outdated stuff
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633121 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/pom.xml
+++ b/bundles/extensions/event/pom.xml
@@ -116,7 +116,7 @@
                         -Xmx2048m -XX:MaxPermSize=512m
                     </argLine>
                     <includes>
-                        <include>**/it/DisabledTest*</include>
+                        <include>**/it/*</include>
                     </includes>
                 </configuration>
             </plugin>
