SLING-4048 : Avoid keeping jobs in memory. Fix job loading when cache is full and use a specific port range for integration tests to avoid port clashes
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633275 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/pom.xml
+++ b/bundles/extensions/event/pom.xml
@@ -104,6 +104,8 @@
                             <portNames>
                                 <portName>http.port</portName>
                             </portNames>
+                            <minPortNumber>35000</minPortNumber>
+                            <maxPortNumber>45000</maxPortNumber>
                         </configuration>
                     </execution>
                 </executions>
