SLING-4083 Enable SlingObject injector to inject all context objects when a request is attached to the current thread
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633409 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/models/impl/pom.xml
+++ b/bundles/extensions/models/impl/pom.xml
@@ -138,5 +138,10 @@
             <version>1.8.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.testing.sling-mock</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
