SLING-4083 add missing "test" scope
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633412 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/models/impl/pom.xml
+++ b/bundles/extensions/models/impl/pom.xml
@@ -142,6 +142,7 @@
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.sling-mock</artifactId>
             <version>1.0.1-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
