--- a/testing/mocks/sling-mock/pom.xml
+++ b/testing/mocks/sling-mock/pom.xml
@@ -132,7 +132,13 @@
             <version>1.2.2</version>
             <scope>compile</scope>
         </dependency>
-    
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.i18n</artifactId>
+            <version>2.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
