SLING-4058 - warn for consistency
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633575 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/it-jackrabbit-oak/pom.xml
+++ b/bundles/jcr/it-jackrabbit-oak/pom.xml
@@ -27,6 +27,11 @@
         <url.version>2.1.0</url.version>
         <org.ops4j.pax.logging.DefaultServiceLog.level>WARN</org.ops4j.pax.logging.DefaultServiceLog.level>
         <org.ops4j.pax.url.mvn.settings></org.ops4j.pax.url.mvn.settings>
+
+        <!-- 
+            WARNING make sure oak.version and sling.oak.server.version 
+            are in sync with bundles/jcr/oak-server
+        -->
         <oak.version>1.0.7</oak.version>
         <sling.oak.server.version>${project.version}</sling.oak.server.version>
     </properties>
