--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 
     <properties>
         <sling.java.version>6</sling.java.version>
+
+        <!-- 
+            WARNING make sure oak.version and sling.oak.server.version 
+            are in sync with bundles/jcr/it-jackrabbit-oak
+        -->
         <oak.version>1.0.7</oak.version>
     </properties>
 
