SLING-3599 - factor out common OSGi setup and add pax debug option
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633623 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/it-jackrabbit-oak/pom.xml
+++ b/bundles/jcr/it-jackrabbit-oak/pom.xml
@@ -27,6 +27,9 @@
         <url.version>2.1.0</url.version>
         <org.ops4j.pax.logging.DefaultServiceLog.level>WARN</org.ops4j.pax.logging.DefaultServiceLog.level>
         <org.ops4j.pax.url.mvn.settings></org.ops4j.pax.url.mvn.settings>
+        
+        <!-- Set this to enable debugging of the VM used to run pax exam -->
+        <pax.vm.options></pax.vm.options>
 
         <!-- 
             WARNING make sure oak.version and sling.oak.server.version 
@@ -79,6 +82,10 @@
                         <property>
                             <name>sling.oak.server.version</name>
                             <value>${sling.oak.server.version}</value>
+                        </property>
+                        <property>
+                            <name>pax.vm.options</name>
+                            <value>${pax.vm.options}</value>
                         </property>
                     </systemProperties>
                     <argLine>
