--- a/tooling/maven/slingstart-maven-plugin/pom.xml
+++ b/tooling/maven/slingstart-maven-plugin/pom.xml
@@ -86,7 +86,7 @@
        <dependency>
            <groupId>org.apache.sling</groupId>
            <artifactId>org.apache.sling.provisioning.model</artifactId>
-           <version>1.0.0</version>
+           <version>1.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
