SLING-3599 - OakRepositoryIT.testOsgiResourceEvents now works with Oak 1.0.7
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633812 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/it-jackrabbit-oak/pom.xml
+++ b/bundles/jcr/it-jackrabbit-oak/pom.xml
@@ -37,6 +37,12 @@
         -->
         <oak.version>1.0.7</oak.version>
         <sling.oak.server.version>${project.version}</sling.oak.server.version>
+        
+        <!-- optionally activate the webconsole -->
+        <webconsole.active>false</webconsole.active>
+        <http.port></http.port>
+        
+        <pax.exam.service.timeout>10000</pax.exam.service.timeout>
     </properties>
 
     <build>
@@ -86,6 +92,14 @@
                         <property>
                             <name>pax.vm.options</name>
                             <value>${pax.vm.options}</value>
+                        </property>
+                        <property>
+                            <name>webconsole.active</name>
+                            <value>${webconsole.active}</value>
+                        </property>
+                        <property>
+                            <name>pax.exam.service.timeout</name>
+                            <value>${pax.exam.service.timeout}</value>
                         </property>
                     </systemProperties>
                     <argLine>
