SLING-3599 - test.scale in pax.vm.options lets testOsgiResourceEvents create more nodes
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1633820 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/it-jackrabbit-oak/pom.xml
+++ b/bundles/jcr/it-jackrabbit-oak/pom.xml
@@ -29,6 +29,7 @@
         <org.ops4j.pax.url.mvn.settings></org.ops4j.pax.url.mvn.settings>
         
         <!-- Set this to enable debugging of the VM used to run pax exam -->
+        <!-- Include -Dtest.scale=N to use larger data sets in some tests -->
         <pax.vm.options></pax.vm.options>
 
         <!-- 
