--- a/contrib/extensions/replication/core/pom.xml
+++ b/contrib/extensions/replication/core/pom.xml
@@ -191,23 +191,20 @@
         <!-- HTTP -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>fluent-hc</artifactId>
-            <version>4.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpasyncclient</artifactId>
-            <version>4.0</version>
+            <version>4.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore-osgi</artifactId>
-            <version>4.3.1</version>
+            <version>4.3.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient-osgi</artifactId>
             <version>4.3.4</version>
+            <scope>provided</scope>
         </dependency>
         <!-- JACKRABBIT -->
         <dependency>
