--- a/contrib/extensions/replication/core/pom.xml
+++ b/contrib/extensions/replication/core/pom.xml
@@ -78,7 +78,8 @@
                             org.apache.sling.replication.queue,
                             org.apache.sling.replication.trigger,
                             org.apache.sling.replication.packaging,
-                            org.apache.sling.replication.transport.authentication
+                            org.apache.sling.replication.transport.authentication,
+                            org.apache.sling.replication.util
                         </Export-Package>
                         <Embed-Dependency>httpasyncclient</Embed-Dependency>
                     </instructions>
