SLING-4106 - cleand up agent API, moved replication component stuff to component package
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1634545 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/replication/core/pom.xml
+++ b/contrib/extensions/replication/core/pom.xml
@@ -72,6 +72,7 @@
                             SLING-CONTENT/libs/sling/replication;path:=/libs/sling/replication;overwrite:=true
                         </Sling-Initial-Content>
                         <Export-Package>
+                            org.apache.sling.replication.component,
                             org.apache.sling.replication.agent,
                             org.apache.sling.replication.communication,
                             org.apache.sling.replication.event,
