--- a/pom.xml
+++ b/pom.xml
@@ -270,11 +270,12 @@
 
                         <sling.additional.bundle.1>httpcore-osgi</sling.additional.bundle.1>
                         <sling.additional.bundle.2>httpclient-osgi</sling.additional.bundle.2>
-                        <sling.additional.bundle.3>org.apache.sling.hc.core</sling.additional.bundle.3>
-                        <sling.additional.bundle.4>org.apache.jackrabbit.vault</sling.additional.bundle.4>
-                        <sling.additional.bundle.5>org.apache.sling.replication.core</sling.additional.bundle.5>
-                        <sling.additional.bundle.6>org.apache.sling.replication.sample</sling.additional.bundle.6>
-                        <sling.additional.bundle.7>${project.build.finalName}.jar</sling.additional.bundle.7>
+                        <sling.additional.bundle.3>org.apache.sling.discovery.impl</sling.additional.bundle.3>
+                        <sling.additional.bundle.4>org.apache.sling.hc.core</sling.additional.bundle.4>
+                        <sling.additional.bundle.5>org.apache.jackrabbit.vault</sling.additional.bundle.5>
+                        <sling.additional.bundle.6>org.apache.sling.replication.core</sling.additional.bundle.6>
+                        <sling.additional.bundle.7>org.apache.sling.replication.sample</sling.additional.bundle.7>
+                        <sling.additional.bundle.8>${project.build.finalName}.jar</sling.additional.bundle.8>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
@@ -300,6 +301,12 @@
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.osgi</artifactId>
             <version>2.2.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.discovery.impl</artifactId>
+            <version>1.0.12</version>
             <scope>provided</scope>
         </dependency>
         <!-- FILEVAULT -->
