--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -105,6 +105,7 @@
           <module>extensions/leak-detector</module>
           <module>extensions/mongodb</module>
           <module>extensions/obr</module>
+          <module>extensions/distribution/api</module>
           <module>extensions/distribution/core</module>
           <module>extensions/distribution/sample</module>
           <module>extensions/distribution/it</module>
