Use old pax version for java 6, new version for java 7+
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1637401 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/event/pom.xml
+++ b/bundles/extensions/event/pom.xml
@@ -168,6 +168,8 @@
                 <jdk>1.6</jdk>
             </activation>
             <properties>
+                <exam.version>3.5.0</exam.version>
+                <url.version>2.1.0</url.version>
                 <min.port>36000</min.port>
                 <max.port>36999</max.port>
             </properties>
