SLING-3735 - support JNDI lookup in JDBC DataSource Provider
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1637799 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/datasource/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/extensions/datasource/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -130,7 +130,7 @@ logValidationErrors.name=Log Validation Error
 logValidationErrors.description=Set this to true to log errors during the validation phase to the log file
 
 datasource.svc.prop.name.name=DataSource Service Property Name
-datasource.svc.prop.name.name.description=Name of the service property which would store the DataSource Name while\
+datasource.svc.prop.name.description=Name of the service property which would store the DataSource Name while\
   registering the DataSource instance as OSGi service
 
 
