--- a/bundles/servlets/resolver/pom.xml
+++ b/bundles/servlets/resolver/pom.xml
@@ -44,6 +44,7 @@
 
     <properties>
         <site.jira.version.id>12314292</site.jira.version.id>
+        <sling.java.version>6</sling.java.version>
     </properties>
 
     <build>
