SLING-4151 - disable launchpad/debian for now
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1639586 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -135,7 +135,7 @@
           <module>validation</module>
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
-          <module>launchpad/debian</module>
+          <!-- disabled due to SLING-4151 for now <module>launchpad/debian</module> -->
     </modules>
     <profiles>
         <profile>
