--- a/testing/mocks/osgi-mock/pom.xml
+++ b/testing/mocks/osgi-mock/pom.xml
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
