--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>org.apache.sling.servlets.resolver</artifactId>
     <packaging>bundle</packaging>
-    <version>2.3.6</version>
+    <version>2.3.7-SNAPSHOT</version>
 
     <name>Apache Sling Servlet Resolver</name>
     <description>
@@ -37,9 +37,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.servlets.resolver-2.3.6</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.servlets.resolver-2.3.6</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.servlets.resolver-2.3.6</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/servlets/resolver</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/servlets/resolver</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/servlets/resolver</url>
     </scm>
 
     <properties>
