SLING-4180 - Sightly Engine should properly reimport its own API export
* added ProviderType annotation for services implemented by the engine bundle
* added ConsumerType annotation for services that can be implemented by other bundles

--- a/contrib/scripting/sightly/engine/pom.xml
+++ b/contrib/scripting/sightly/engine/pom.xml
@@ -79,7 +79,7 @@
                     <instructions>
                         <Embed-Dependency>antlr4-runtime,org.abego.treelayout.core</Embed-Dependency>
                         <Export-Package>
-                            org.apache.sling.scripting.sightly.api;version=1.0.0
+                            org.apache.sling.scripting.sightly.api
                         </Export-Package>
                         <ScriptEngine-Name>${project.name}</ScriptEngine-Name>
                         <ScriptEngine-Version>${project.version}</ScriptEngine-Version>
