SLING-4151 - re-enabled launchpad/debian
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1640438 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -136,7 +136,7 @@
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
           <module>xss</module>
-          <!-- disabled due to SLING-4151 for now <module>launchpad/debian</module> -->
+          <module>launchpad/debian</module>
     </modules>
     <profiles>
         <profile>
