SLING-4209 Expose required JavaScript files through the BundleResourceProvider
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1642293 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/js-use-provider/pom.xml
+++ b/contrib/scripting/sightly/js-use-provider/pom.xml
@@ -68,7 +68,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Sling-Initial-Content>SLING-INF;overwrite=true</Sling-Initial-Content>
+                        <Sling-Bundle-Resources>/libs/sling/sightly/js;path:=/SLING-INF/libs/sling/sightly/js</Sling-Bundle-Resources>
                     </instructions>
                 </configuration>
             </plugin>
